# DroneWar

./: .gitignore  LICENSE  README.md  dronewar.spec  dronewar_rulebook.docx  launcher.py  main.py  play.command  pyproject.toml  server.py  server.py.bak
.github/workflows/: ci.yml  release.yml
docs/: LICENSE  README.md  launcher.py  server.py
docs/.github/workflows/: release.yml
docs/dronewar/agents/: agents.py
docs/dronewar/env/: observation.py
docs/static/: game.html
docs/tests/: test_dronewar.py
dronewar/engine/: engine.py
dronewar/env/: actions.py  airspace.py
dronewar/scenarios/: scenarios.py
static/: game.html
