[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "dronewar"
version     = "1.0.0"
description = "A multi-agent UAV/drone warfare wargame and research platform"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.8"

authors = [
  { name = "Alastair Kocho-Williams" },
]

keywords = [
  "wargame", "drone", "uav", "counter-uas", "swarm",
  "multi-agent", "simulation", "electronic-warfare",
  "human-machine-teaming", "reinforcement-learning",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Games/Entertainment :: Simulation",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
]

# Core simulation has zero runtime dependencies.
dependencies = []

[project.optional-dependencies]
web = ["flask>=2.3"]
dev = ["pytest>=7.0", "pytest-cov"]
rl  = ["numpy>=1.24"]
all = ["flask>=2.3", "numpy>=1.24"]


[project.scripts]
dronewar       = "main:main"
dronewar-serve = "server:main"

[project.urls]
Homepage = "https://github.com/yourusername/dronewar"
Issues   = "https://github.com/yourusername/dronewar/issues"

[tool.setuptools.packages.find]
include = ["dronewar*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
